<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">        
	    <TextView
	        android:layout_width="80dp"
	        android:layout_height="50dp"
	        android:text="@string/height"
	        android:gravity="center" />
	    <TextView
	        android:layout_width="80dp"
	        android:layout_height="50dp"
	        android:text="@string/weight" 
	        android:gravity="center"/>
	    <TextView
	        android:layout_width="80dp"
	        android:layout_height="50dp"
	        android:text="@string/result" 
	        android:gravity="center"/>
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="50dp"
	        android:text="@string/time"
	        android:gravity="center"/>
    </LinearLayout>
    
    <!-- 列表存储区 -->
    <ListView 
        android:id="@+id/bmiList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"></ListView>

</LinearLayout>